# libterra

./: .gitignore  CMakeLists.txt  libterra.vcxproj
include/: version.h
include/libterra/: Bitmap.h  Exception.h  Plotmap.h  Roadmap.h  TypeConv.h  Vector.h  XMLDocument.h
src/: Bitmap.cpp  Plotmap.cpp  Roadmap.cpp  Vector.cpp  XMLDocument.cpp  version.cpp
